--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
